# GABCL

./: .gitignore  CMakeLists.txt  README.md  build.sh
Assignments/: Assign1.ipynb  Assign2.ipynb  Assign3.ipynb
Course/PythonTutorials/: PY0101EN-1-1-Write_your_first_python_code.ipynb  PY0101EN-2-4-Dictionaries.ipynb
Fighter/client/: index.css  index.html  package.json  vite.config.js
Fighter/client/src/: backend.ts  index.ts
Fighter/client/src/scenes/: Champion.ts  Part4Scene.ts  SceneSelector.ts  StartScreen.ts
Fighter/server/src/: app.config.ts
Fighter/server/src/rooms/: Part4Room.ts  Part4State.ts
res/shaders/: direct_shadowFB.glsl
src/: CL.h  Camera.h  Engine.cpp  Engine.h  algebra.c  algebra.h  camera.h  engine.c  engine.h  gab_math.h  main.c  main.cpp  math.c  math.h  shapes.cl  shapes.h  utils.h  window.h
src/Backend/: BackEnd.cpp  BackEnd.h
src/Backend/Vulkan/: VK_Allocation.hpp  VK_Backend.cpp  VK_Backend.h  VK_Buffer.hpp  VK_Common.hpp  VK_ErrorCheck.hpp  VK_FrameData.hpp  VK_Raytracing.hpp  VK_Shader.hpp  VK_Texture.cpp  VK_Texture.h
src/Core/: Mesh.hpp  RendererCommon.hpp  Types.hpp
src/Input/: Input.cpp  Input.h
src/app/: Application.cpp
src/backend/: Buffer.cpp  Buffer.h  ModelManager.cpp  ModelManager.h  Renderer.cpp  Renderer.h
